--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web developer portfolio</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
+        <h3>Aad</h3>
+        <ul>
+           <li><a href=""></a>Portfolio</li>
+           <li><a href=""></a>Blog</li>
+           <li><button>Hire Me</button></li>
+        </ul>
 
     </header> 
     <main>
 
     </main> 
     <footer>
-        
+
     </footer>
 </body>
 </html>
